--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>首页</title>
 	</head>
 	<body>
+		<p>欢迎</p>
 	</body>
 </html>
